# rust_chat

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  Makefile  README.md  config.example.toml  run.bat  run.ps1  test-mcp-dialog.py
.cargo/: config.toml
.mini-agent/: identity.md
docs/: gpio-uno-q-research.md
docs/plans/: 2026-06-06-hermes-inspired-enhancements-implementation.md  2026-06-06-hermes-inspired-enhancements.md  2026-06-06-memory-enhancement-design.md  2026-06-06-memory-enhancement-implementation.md  2026-06-06-p0-tool-trait-hook-design.md
examples/: README.md
examples/mcp-filesystem/: Cargo.toml  test.sh
examples/mcp-filesystem/src/: main.rs
examples/mcp-filesystem/tests/: integration_test.rs
examples/mcp-gpio/: Cargo.toml
examples/mcp-gpio/src/: main.rs
examples/mcp-led-matrix/: Cargo.toml
examples/mcp-led-matrix/mcu-sketch/: matrix_rpc.ino
examples/mcp-led-matrix/src/: main.rs
examples/mcp-time/: Cargo.toml  test.sh
examples/mcp-time/src/: main.rs
examples/mcp-time/tests/: integration_test.rs
src/: agent.rs  compression.rs  config.rs  file_memory.rs  heartbeat.rs  hooks.rs  identity.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory.rs  memory_reviewer.rs  models.rs  observer.rs  session_search.rs  skill.rs  tool.rs  tool_registry.rs
systemd/: mini-agent.service
tests/: memory_integration_test.rs
